// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewPaymentPlan connector mapStateToProps generates the correct props 1`] = `
Object {
  "arrearsId": "123",
  "breadcrumb": Array [
    Object {
      "href": "#{Dashboards.Core.CustomerBaseURL}",
      "id": "breadcrumb-dashboard",
      "label": "Dashboard",
    },
    Object {
      "id": "breadcrumb-arrearsDashboard",
      "label": "My arrears",
      "to": "/",
    },
    Object {
      "label": "Arrears details",
      "to": "/arrears-details/123",
    },
    Object {
      "id": "breadcrumb-View payment plan",
      "label": "View payment plan",
    },
  ],
  "error": false,
  "errorText": Object {
    "closePlan": "There was a problem closing this payment plan, please try again.",
    "closePlanSelectRequired": "Please select a reason",
    "formError": "There was a problem adding this payment plan, please try again.",
    "installmentAmount": "Please enter an instalment amount",
    "installmentAmountNotNumber": "Please provide a number",
    "installmentFrequency": "Please select an instalment frequency",
    "installmentPeriod": "Please select an instalment period",
    "note": "Please enter some notes",
    "planType": "Please select a plan type",
    "startDate": "Please enter a start date",
  },
  "labels": Object {
    "attachFile": "Attach documents",
    "backButton": "Back",
    "closeButton": "Close Payment Plan",
    "closePlanDescription": "Are you sure you want to close this payment plan?",
    "closePlanDisclaimer": "Closing this payment plan will not automatically terminate the financial arrangement. Separate action required",
    "closePlanNo": "No",
    "closePlanYes": "Yes, Close the plan",
    "contactName": "Contact Name",
    "description": "Note",
    "detail": "Payment Plan type",
    "endDate": "End date",
    "endedBy": "Ended By",
    "every": "Every",
    "heading": "Payment Plan",
    "installment": "Instalment",
    "installmentAmount": "Instalment amount",
    "installmentFrequency": "Instalment frequency",
    "installmentPeriod": "Instalment period",
    "lastModifiedAt": "Last modified",
    "lastModifiedBy": "By",
    "newArrangementOption": "New Arrangement",
    "note": "Note",
    "paymentPlanType": "Payment plan type",
    "pleaseSelectAReason": "Please select a reason...",
    "raisedBy": "Raised by",
    "reasonSelect": "Select reason",
    "reasonText": "Enter a description",
    "startDate": "Start date",
    "status": "Status",
    "submitButton": "Create Payment Plan",
    "tenantDefaultOption": "Tenant Default",
  },
  "loading": false,
  "paymentPlan": Object {
    "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.",
    "endDate": "23/12/2018",
    "installment": "£40.00 Every 1 Week(s)",
    "raisedBy": "Mabelle Ortega",
    "startDate": "23/07/2018",
    "type": "Personal",
  },
  "paymentPlanId": "456",
  "redirectToDetailsPage": [Function],
  "viewPaymentPlan": "View payment plan",
}
`;

exports[`ViewPaymentPlan connector mapStateToProps mergeProps generates the correct props 1`] = `
Object {
  "clearError": [Function],
  "error": false,
  "errorText": Object {
    "closePlan": "There was a problem closing this payment plan, please try again.",
    "closePlanSelectRequired": "Please select a reason",
    "formError": "There was a problem adding this payment plan, please try again.",
    "installmentAmount": "Please enter an instalment amount",
    "installmentAmountNotNumber": "Please provide a number",
    "installmentFrequency": "Please select an instalment frequency",
    "installmentPeriod": "Please select an instalment period",
    "note": "Please enter some notes",
    "planType": "Please select a plan type",
    "startDate": "Please enter a start date",
  },
  "getPaymentPlan": [Function],
  "history": Object {
    "push": [Function],
  },
  "labels": Object {
    "attachFile": "Attach documents",
    "backButton": "Back",
    "closeButton": "Close Payment Plan",
    "closePlanDescription": "Are you sure you want to close this payment plan?",
    "closePlanDisclaimer": "Closing this payment plan will not automatically terminate the financial arrangement. Separate action required",
    "closePlanNo": "No",
    "closePlanYes": "Yes, Close the plan",
    "contactName": "Contact Name",
    "description": "Note",
    "detail": "Payment Plan type",
    "endDate": "End date",
    "endedBy": "Ended By",
    "every": "Every",
    "heading": "Payment Plan",
    "installment": "Instalment",
    "installmentAmount": "Instalment amount",
    "installmentFrequency": "Instalment frequency",
    "installmentPeriod": "Instalment period",
    "lastModifiedAt": "Last modified",
    "lastModifiedBy": "By",
    "newArrangementOption": "New Arrangement",
    "note": "Note",
    "paymentPlanType": "Payment plan type",
    "pleaseSelectAReason": "Please select a reason...",
    "raisedBy": "Raised by",
    "reasonSelect": "Select reason",
    "reasonText": "Enter a description",
    "startDate": "Start date",
    "status": "Status",
    "submitButton": "Create Payment Plan",
    "tenantDefaultOption": "Tenant Default",
  },
  "loading": false,
  "match": Object {
    "params": Object {
      "arrearsId": "123",
      "paymentPlanId": "456",
    },
  },
  "onBack": [Function],
  "onClose": [Function],
  "paymentPlan": Object {
    "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.",
    "endDate": "23/12/2018",
    "installment": "£40.00 Every 1 Week(s)",
    "raisedBy": "Mabelle Ortega",
    "startDate": "23/07/2018",
    "type": "Personal",
  },
  "updatePageHeader": [Function],
  "viewPaymentPlan": "View payment plan",
}
`;

exports[`ViewPaymentPlan connector mapStateToProps mergeProps performs the correct actions for onClose 1`] = `
Array [
  Array [
    <Unknown
      arrearsId="123"
      paymentPlanId="456"
      redirectToDetailsPage={[Function]}
/>,
  ],
]
`;
